# ChangeLog for sci-mathematics/maxima
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/maxima/ChangeLog,v 1.25 2007/03/08 07:12:41 opfer Exp $

  08 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  files/50maxima-gentoo.el:
  add load path correctly, fixes bug 169588, reported by Ulrich Mueller
  <ulm@kph.uni-mainz.de>

  22 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

*maxima-5.11.0 (13 Jan 2007)

  13 Jan 2007; Marcus D. Hanwell <cryos@gentoo.org>
  +files/maxima-5.11.0-default-psviewer.patch, files/50maxima-gentoo.el,
  +files/maxima-5.11.0-default-browser.patch,
  +files/maxima-5.11.0-diff_form.patch,
  +files/maxima-5.11.0-sbcl-disable-debugger.patch, metadata.xml,
  +maxima-5.11.0.ebuild:
  Version bump, move from the gentooscience.org overlay. Many thanks to Andrey
  Grozin <A.G.Grozin@inp.nsk.su> and Sebastien Fabbro <seb@ist.utl.pt> for
  their work on this in the overlay.

*maxima-5.10.0 (31 Oct 2006)

  31 Oct 2006; Jeff Gardner <je_fro@gentoo.org> +maxima-5.10.0.ebuild:
  New version for bug #136289

  12 Jul 2006; Danny van Dyk <kugelfang@gentoo.org> maxima-5.9.3.ebuild:
  QA: Corrected typo: tcktk vs tcltk.

  17 Apr 2006; Marcus D. Hanwell <cryos@gentoo.org>
  files/50maxima-gentoo.el:
  Updated emacs file, closes bug 130245.

*maxima-5.9.3 (15 Apr 2006)

  15 Apr 2006; Marcus D. Hanwell <cryos@gentoo.org>
  +files/maxima-5.9.3-default-browser.patch,
  +files/maxima-5.9.3-emaxima.patch, +maxima-5.9.3.ebuild:
  Version bump with lots of fixes, see bugs for more details. Many thanks to
  Sebastien Fabbro <seb@ist.utl.pt>, Robert Dodier <robert.dodier@gmail.com>,
  Thomas Weidner <3.14159@gmx.net> and others for their work. Closes bugs
  112717 and 112754.

  11 Apr 2006; Stephanie Lockwood-Childs <wormo@gentoo.org>
  maxima-5.9.1-r5.ebuild:
  stop xmaxima with clisp from executing 'kill -TERM -1' on exit (Bug #111062)