@@ -1,0 +1,3 @@
+MD5 d9ae353e8eba9b9d5686e119e59ab88c maxima-5.11.0.tar.gz 13924132
+RMD160 8f7fb1b8bc7438ffdc393a0eb0f86b5efa79ef3e maxima-5.11.0.tar.gz 13924132
+SHA256 7a7259123bd81a7de3609c7e59b561d49e2710a8f7117c42f373afdd6a6786ac maxima-5.11.0.tar.gz 13924132
